kube-templates/gateway/overlays/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyk-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # # nginx.ingress.kubernetes.io/app-root: /api
spec:
  rules:
  - host: tyk.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tyk-svc
            port:
              number: 8080
